--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "svelte": "^4.2.8",
-    "vite": "^5.0.8"
+    "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "svelte": "^3.49.0",
+    "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "marked": "^4.1.1",
+    "moment": "^2.29.4",
+    "qs": "^6.11.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
